--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 {{ "<!-- FOOTER -->" | safeHTML }}
-<section class="bg-grey-dark text-white text-left" id="footer">
+<section class="bg-grey-dark text-white " id="footer">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
