--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -12,31 +12,18 @@
         </div>
         {{ "<!-- Collect the nav links, forms, and other content for toggling -->" | safeHTML }}
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                {{ if and .Site.Params.about .Site.Params.navigation.links.about }}
-                    <li>
-                        <a class="page-scroll" href="#about">{{ .Site.Params.navigation.links.about }}</a>
-                    </li>
-                {{ end }}
-                {{ if and .Site.Params.services.list .Site.Params.navigation.links.services }}
-                    <li>
-                        <a class="page-scroll" href="#services">{{ .Site.Params.navigation.links.services }}</a>
-                    </li>
-                {{ end }}
-                {{ if and .Site.Data.projects .Site.Params.navigation.links.portfolio }}
-                    <li>
-                        <a class="page-scroll" href="#portfolio">{{ .Site.Params.navigation.links.portfolio }}</a>
-                    </li>
-                {{ end }}
-                {{ if and .Site.Params.location .Site.Params.navigation.links.location }}
+            <ul class="nav navbar-nav">
+                {{ range .Site.Params.navigation.main }}
                 <li>
-                    <a class="page-scroll" href="#location">{{ .Site.Params.navigation.links.location }}</a>
+                    <a href="{{ .url }}">{{ .name | markdownify }}</a>
                 </li>
                 {{ end }}
-                {{ if and .Site.Params.contact .Site.Params.navigation.links.contact }}
-                    <li>
-                        <a class="page-scroll" href="#contact">{{ .Site.Params.navigation.links.contact }}</a>
-                    </li>
+            </ul>
+            <ul class="nav nav-menu">
+                {{ range .Site.Params.navigation.secundary }}
+                <li class="navbar-border">
+                    <a href="{{ .url }}">{{ .name | markdownify }}</a>
+                </li>
                 {{ end }}
             </ul>
         </div>
