--- a/layouts/partials/socials.html
+++ b/layouts/partials/socials.html
@@ -4,13 +4,13 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="col-lg-3">
-                        <hr class="pst-left">
+                        <hr class="pst-left hr-blue">
                     </div>
                     <div class="col-lg-6">
                         <h2 class="section-heading bg-blue">{{ .Site.Params.socials.headline }}</h2>
                     </div>
                     <div class="col-lg-3">
-                       <hr class="pst-right">
+                       <hr class="pst-right hr-blue">
                     </div>
                 </div>
             </div>
