--- a/layouts/section/tarifas.html
+++ b/layouts/section/tarifas.html
@@ -4,31 +4,130 @@
         {{ partial "head.html" . }}
     </head>
     <body id="page-top">
+        <section>
         {{ partial "nav.html" . }}
-
-        <section id="content">
-            <div class="container">
-
-                <div class="row">
-
-                    <div class="col-md-12">
-                        {{ .Title}}
-                        <div>
-                            {{ range .Data.Pages }}
-                                {{.Title}}
-                                {{.Content}}
-                            {{ end }}
-                        </div>
-
-                    </div>
-
-                </div>
-                <!-- /.row -->
-
-            </div>
-            <!-- /.container -->
         </section>
-        <!-- /#content -->
+
+        {{ range first 1 .Data.Pages }}
+        <section class="title-header">
+          <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="col-lg-3">
+                        <hr class="pst-left hr-blue">
+                    </div>
+                    <div class="col-lg-6">
+                        <h2 class="section-heading bg-blue">
+                            {{ .Title }}
+                        </h2>
+                    </div>
+                    <div class="col-lg-3">
+                    <hr class="pst-right hr-blue">
+                    </div>
+                </div>
+            </div>
+          </div>
+        </section>
+
+        <section id="tarifas">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        {{ range $obj := .Params.content1 }}
+                            {{ $values := split $obj "/" }}
+                            <div class="col-lg-4">
+                                <div class="dialogbox">
+                                    <div class="bd">
+                                    <span class="tip tip-down"></span>
+                                    <div class="message">
+                                        <span> {{index $values 0}}</span>
+                                    </div>
+                                    </div>
+                                </div>
+
+                                <div class="text-center title-box">
+                                    <h3>{{index $values 1}}</h3>
+                                </div>
+
+                                <div class="caraceristics">
+                                    <p>{{index $values 2}}</p>
+                                </div>
+                            </div>
+                        {{ end }}
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="unete" class="bg-blue ss-style-triangles">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h1 class="text-shadow">{{.Params.message1}}</h1>
+                        <a href="#about" class="btn btn-primary btn-xl page-scroll">ÚNETE</a>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        {{ range $obj := .Params.content2 }}
+                            {{ $values := split $obj "/" }}
+                            <div class="col-lg-4">
+                                <div class="text-center title-box">
+                                    <h4>{{index $values 0}}</h3>
+                                </div>
+
+                                <div class="caraceristics">
+                                    <p>{{index $values 1}}</p>
+                                </div>
+                            </div>
+                        {{ end }}
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="col-lg-3">
+                        <hr class="pst-left hr-blue">
+                    </div>
+                    <div class="col-lg-6">
+                        <h2 class="section-heading bg-blue">{{ .Params.headline1 }}</h2>
+                    </div>
+                    <div class="col-lg-3">
+                       <hr class="pst-right hr-blue">
+                    </div>
+                </div>
+            </div>
+        {{ end }}
+        
+        {{ range after 1 .Data.Pages }}
+        <div class="row">
+                
+                <div class="col-lg-12 questions">
+                    <h3>
+                        <a class="" data-toggle="collapse" href="#collapse1">{{.Title}}</a>
+                    </h3>
+                </div>
+                <div class="col-lg-12">
+                    <div id="collapse1" class="panel-collapse collapse">
+                        <div class="panel-body">{{.Content}}</div>
+                        
+                        
+                    </div>
+                </div>
+                
+            </div>
+        {{ end }}
+
+        </section>
         
         
         {{ partial "footer.html" . }}
