--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -113,6 +113,7 @@ p {
 
 section {
     padding: 50px 0;
+    position: relative;
 }
 
 aside {
@@ -647,4 +648,79 @@ body {
 .questions a {
     text-decoration: none;
     color: #252525 !important;
+}
+
+.tip {
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  background: transparent;
+  border: 10px solid #1d90af;
+}
+
+.tip-down {
+  bottom: -25px;
+  left: 45%;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+}
+
+.dialogbox .bd {
+  margin: auto;
+  width: 50%;
+  position: relative;
+  max-width: 150px;
+  height: 100px;
+  padding: 5px;
+  background-color: #44bee1;
+  border-radius: 15px;
+  border: 5px solid #1d90af;
+}
+
+.bd .message {
+  min-height: 30px;
+  border-radius: 3px;
+  font-size: 30px;
+  text-align: center;
+  line-height: 1.5;
+  color: #252525;
+  padding-top: 15px;
+}
+
+.title-box {
+    padding: 10px;
+}
+
+.message-pd-center {
+    padding: 20px 37%;
+}
+
+.text-shadow {
+    text-shadow: 0.05em 0.05em #fff
+}
+
+section::before,
+section::after {
+    position: absolute;
+    content: '';
+    pointer-events: none;
+}
+
+.ss-style-triangles::before,
+.ss-style-triangles::after {
+	left: 50%;
+	width: 100px;
+	height: 100px;
+	-webkit-transform: translateX(-50%) rotate(45deg);
+	transform: translateX(-50%) rotate(45deg);
+}
+
+.ss-style-triangles::after {
+	bottom: -30px;
+	z-index: 10;
+	background: inherit;
+}
+
+#unete {
+    padding: 100px 0px;
 }
