--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -8,6 +8,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    font-weight: 300;
 }
 
 body {
@@ -25,15 +26,16 @@ hr.light {
 }
 
 a {
-    color: #f05f40;
+    color: #44bee1;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
+    font-weight: 300;
 }
 
 a:hover,
 a:focus {
-    color: #eb3812;
+    color: #44bee1;
 }
 
 #about a {
@@ -58,6 +60,7 @@ p {
     margin-bottom: 20px;
     font-size: 16px;
     line-height: 1.5;
+    font-weight: 300;
 }
 
 .pst-left {
